fixed gray background overflow, added name to classes in about

--- a/src/components/about_us_v2.css
+++ b/src/components/about_us_v2.css
@@ -4,6 +4,7 @@ body{
 .about-us{
     height:110%;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .au-firstRow .card{
